classDiagram
    class clsPerson {
        #string _FirstName
        #string _LastName
        #string _Email
        #string _Phone
        +string FullName()
        +Print()
    }

    class clsBankClient {
        -string _AccountNumber
        -string _Pin
        -double _Balance
        -bool _MarkForDelete
        +Find(AccountNumber)
        +Save()
        +DeleteClient()
        +static IsClientExist()
        +static GetAllClientsInVector()
        +static GetTotalBalances()
    }

    class clsScreen {
        #_ShowScreenHeader(Title, SubTitle)
        #_PrintMenuOption(Title, SubTitle)
        -static _PrintCentered(Text)
        -static _GetSystemDate()
    }

    class clsMainMenuScreen {
        -_EMainMenu()
        -_ShowListClient()
        -_ShowAddNewClientScreen()
        -_ShowDeleteClientScreen()
        -_ShowUpdateClientScreen()
        -_ShowFindClientScreen()
        -_ShowTransactionsScreen()
        -_ShowAdminScreen()
        -_ShowLogoutScreen()
        +_ShowMainMenuScreen()
        -_PerformMainMenuOption()
    }

    class clsInputAndValidation {
        <<Utility>>
        +read_string()
        +enter_number_from_to()
    }

    %% Inheritance Relationships
    clsPerson <|-- clsBankClient : Inherits
    clsScreen <|-- clsMainMenuScreen : Inherits

    %% Dependencies
    clsMainMenuScreen ..> clsBankClient : Manages
    clsMainMenuScreen ..> clsInputAndValidation : Uses
    clsBankClient ..> clsString : Uses (String Manipulation)
